--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("io.springfox:springfox-swagger2:2.2.2")
+    compile("io.springfox:springfox-swagger-ui:2.2.2")
     testCompile("com.jayway.jsonpath:json-path:2.0.0")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit")
