--- a/build.gradle
+++ b/build.gradle
@@ -27,15 +27,18 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-security')
     compile("io.springfox:springfox-swagger2:2.2.2")
     compile("io.springfox:springfox-swagger-ui:2.2.2")
+    runtime('mysql:mysql-connector-java')
     testCompile("com.jayway.jsonpath:json-path:2.0.0")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit")
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+    gradleVersion = '2.7'
 }
 
 // See: http://stackoverflow.com/questions/26389679/running-spring-app-built-with-gradle-on-heroku
