--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,18 @@
 buildscript {
+
+    ext.kotlin_version = '1.0.0-beta-3595'
+
     repositories {
         mavenCentral()
     }
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.7.RELEASE")
     }
 }
 
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
@@ -31,6 +36,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.security.oauth:spring-security-oauth2:2.0.8.RELEASE")
     compile("org.hsqldb:hsqldb")
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
 
     testCompile("com.jayway.jsonpath:json-path:2.0.0")
     testCompile("org.springframework.boot:spring-boot-starter-test")
@@ -54,4 +61,8 @@ stage.mustRunAfter(clean)
 
 clean << {
     project.file('app.jar').delete()
+}
+
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
 }
