--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'spring-boot'
 
 jar {
     baseName = 'gs-actuator-service'
-    version =  '0.1.0'
+    version = '0.1.0'
 }
 
 sourceCompatibility = 1.8
@@ -38,6 +38,9 @@ dependencies {
     compile("org.hsqldb:hsqldb")
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    compile 'commons-validator:commons-validator:1.5.0'
+
+
 
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile("com.jayway.jsonpath:json-path:2.0.0")
