--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 management.port: 8081
 management.address: 127.0.0.1
+org.breakout.admin_email=admin@break-out.org
+org.breakout.admin_password=password
