--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ management.address=127.0.0.1
 management.port=8083
 server.port=8082
 
-spring.datasource.url= jdbc:mysql://localhost/test
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost/test
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
