Add MailService for sending emails
* Uses breakoutevent/breakout-mailer as the mailing service
* Settings can be set in application.properties

Closes #37

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ management.port: 8081
 management.address: 127.0.0.1
 org.breakout.admin_email=admin@break-out.org
 org.breakout.admin_password=password
+
+org.breakout.mailer.url=localhost
+org.breakout.mailer.port=3000
+org.breakout.mailer.xauthtoken=123456789
