Allow activation of emails with /activation endpoint
A user can activate it's account with a valid activation token
and his email address at /activation?email=email&token=token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ server.port=8082
 org.breakout.mailer.url=localhost
 org.breakout.mailer.port=3000
 org.breakout.mailer.xauthtoken=123456789
+
+# These settings will be used for creating valid activation links
+org.breakout.api.host=localhost
+org.breakout.api.port=8082
