--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ org.breakout.mailer.xauthtoken=123456789
 # These settings will be used for creating valid activation links
 org.breakout.api.host=localhost
 org.breakout.api.port=8082
+
+org.breakout.api.client.name=breakout_app
+org.breakout.api.client.secret=123456789
