Create JWT token for mediaupload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 org.breakout.admin_email=admin@break-out.org
 org.breakout.admin_password=password
 
+org.breakout.api.jwt_secret=12345678
+
 management.address=127.0.0.1
 management.port=8083
 server.port=8082
