--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile 'commons-validator:commons-validator:1.5.0'
     compile("org.springframework:spring-web")
-    compile 'io.jsonwebtoken:jjwt:0.6.0'
+    compile 'com.auth0:java-jwt:2.0.1'
 
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     runtime('mysql:mysql-connector-java')
