--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.security.oauth:spring-security-oauth2:2.0.8.RELEASE")
     compile("org.hsqldb:hsqldb")
+    compile "com.braintreepayments.gateway:braintree-java:2.54.0"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile 'commons-validator:commons-validator:1.5.0'
