Add kotlin support library for jackson

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile("org.springframework:spring-web")
     compile 'com.auth0:java-jwt:2.0.1'
     compile 'com.github.grumlimited:geocalc:v0.5.1'
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.7.1-2"
 
     testCompile "org.powermock:powermock-module-junit4:$powermock_version"
     testCompile "org.powermock:powermock-api-mockito:$powermock_version"
