Add uncommented MySQL dependencies and config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,6 @@ management.address=127.0.0.1
 management.port=8083
 server.port=8082
 
-#spring.datasource.url=jdbc:mysql://localhost/test
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
 org.breakout.mailer.url=localhost
 org.breakout.mailer.port=3000
 org.breakout.mailer.xauthtoken=123456789
@@ -22,3 +17,19 @@ org.breakout.api.port=8082
 
 org.breakout.api.client.name=breakout_app
 org.breakout.api.client.secret=123456789
+
+# Spring datasource with MySQL
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# docker vm as host
+#spring.datasource.url=jdbc:mysql://docker:3306/breakout_test
+
+# localhost
+#spring.datasource.url=jdbc:mysql://localhost/test
+
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+# Spring JPA
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
