--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
 
+    compile "org.javamoney:moneta:1.0"
+
     compile 'commons-validator:commons-validator:1.5.0'
     compile 'com.auth0:java-jwt:2.0.1'
     compile 'com.github.grumlimited:geocalc:v0.5.1'
