Add dummy values for braintree to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ org.breakout.api.client.secret=123456789
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+org.breakout.payment.braintree.merchantid=1234
+org.breakout.payment.braintree.privatekey=1234
+org.breakout.payment.braintree.publickey=1234
+org.breakout.payment.braintree.environment=sandbox
