Add env variables / properties for invitation links

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,6 @@ org.breakout.payment.braintree.merchantid=1234
 org.breakout.payment.braintree.privatekey=1234
 org.breakout.payment.braintree.publickey=1234
 org.breakout.payment.braintree.environment=sandbox
+
+# InvitationURL
+org.breakout.team.invitationurl=https://anmeldung.break-out.org/join/CUSTOMTOKEN
