dont hardcode http, so mailer can use https

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,7 @@ management.address=127.0.0.1
 management.port=8083
 server.port=8082
 
-org.breakout.mailer.url=localhost
-org.breakout.mailer.port=3000
+org.breakout.mailer.url=http://localhost:3000
 org.breakout.mailer.xauthtoken=123456789
 
 # These settings will be used for creating valid activation links
