Remove Swagger + SwaggerUI from production profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,6 @@ org.breakout.payment.braintree.environment=sandbox
 
 # InvitationURL
 org.breakout.team.invitationurl=https://anmeldung.break-out.org/join/CUSTOMTOKEN
+
+# Possible profiles: production, development, test
+spring.profiles.active=development
