--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,17 +16,17 @@ org.breakout.api.host=http://localhost:8082
 org.breakout.api.client.name=breakout_app
 org.breakout.api.client.secret=123456789
 
-# Spring datasource with MySQL
+# MySQL in Docker
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-# docker vm as host
 #spring.datasource.url=jdbc:mysql://docker:3306/breakout_test
-
-# localhost
-#spring.datasource.url=jdbc:mysql://localhost/test
-
 #spring.datasource.username=root
 #spring.datasource.password=root
+
+# MySQL on travis CI / localhost
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.username=root
+spring.datasource.password=
 
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=create
