Change localhost to 127.0.0.1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ org.breakout.api.client.secret=123456789
 
 # MySQL on travis CI / localhost
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.url=jdbc:mysql://127.0.0.1/test
 spring.datasource.username=root
 spring.datasource.password=
 
