Don't show SQL from Hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.datasource.password=
 
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 org.breakout.payment.braintree.merchantid=1234
 org.breakout.payment.braintree.privatekey=1234
