--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,44 +1,22 @@
+# Admin Account Data
 org.breakout.admin_email=admin@break-out.org
 org.breakout.admin_password=password
 
+# Media Uploader / Recoder shared secret
 org.breakout.api.jwt_secret=12345678
 
-management.address=127.0.0.1
-management.port=8083
+# server port
 server.port=8082
 
+# Breakout mailer settings
 org.breakout.mailer.url=http://localhost:3000
 org.breakout.mailer.xauthtoken=123456789
 
 # These settings will be used for creating valid activation links
 org.breakout.api.host=http://localhost:8082
 
+# OAuth Client secrets
+# TODO: Where are they still used??
 org.breakout.api.client.name=breakout_app
 org.breakout.api.client.secret=123456789
 
-# MySQL in Docker
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://docker:3306/breakout_test
-#spring.datasource.username=root
-#spring.datasource.password=root
-
-# MySQL on travis CI / localhost
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1/test
-spring.datasource.username=root
-spring.datasource.password=
-
-# Spring JPA
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
-
-org.breakout.payment.braintree.merchantid=1234
-org.breakout.payment.braintree.privatekey=1234
-org.breakout.payment.braintree.publickey=1234
-org.breakout.payment.braintree.environment=sandbox
-
-# InvitationURL
-org.breakout.team.invitationurl=https://anmeldung.break-out.org/join/CUSTOMTOKEN
-
-# Possible profiles: production, development, test
-spring.profiles.active=development
