--- a/src/main/resources/application-travis.properties
+++ b/src/main/resources/application-travis.properties
@@ -6,4 +6,4 @@ spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
 
-spring.profiles.include=default,development
+spring.profiles.include=default,development,test
