--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ org.breakout.api.host=http://localhost:8082
 org.breakout.api.client.name=breakout_app
 org.breakout.api.client.secret=123456789
 
+# Invitation Url
+org.breakout.team.invitationurl=https://anmeldung.break-out.org/join/CUSTOMTOKEN
