--- a/src/main/resources/application-floriandev.properties
+++ b/src/main/resources/application-floriandev.properties
@@ -4,6 +4,11 @@ spring.datasource.url=jdbc:mysql://docker:3306/breakout_test
 spring.datasource.username=root
 spring.datasource.password=root
 
+# Run a validation query each 60s keep alive connection to mysql
+spring.datasource.testWhileIdle = true
+spring.datasource.timeBetweenEvictionRunsMillis = 60000
+spring.datasource.validationQuery = SELECT 1
+
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=create
 
