fixed bug in password reset where token wasn't saved

--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -6,3 +6,5 @@ spring.datasource.password=
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.profiles.include=default,development
+org.breakout.api.host=http://localhost:3000
+org.breakout.team.invitationurl=http://localhost:3000/join/CUSTOMTOKEN
