--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/breakout_test
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.profiles.include=default,development
