--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-
+    compile 'com.google.maps:google-maps-services:0.1.12'
     compile "org.javamoney:moneta:1.0"
 
     compile 'commons-validator:commons-validator:1.5.0'
