--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.profiles.include=default,development
 org.breakout.api.host=http://localhost:3000
 org.breakout.team.invitationurl=http://localhost:3000/join/CUSTOMTOKEN
+org.breakout.google.apikey=123456789
