--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ org.breakout.api.client.name=breakout_app
 org.breakout.api.client.secret=123456789
 # Invitation Url
 org.breakout.team.invitationurl=https://anmeldung.break-out.org/join/CUSTOMTOKEN
+org.breakout.google.apikey=123456789
