--- a/build.gradle
+++ b/build.gradle
@@ -46,14 +46,15 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "org.springframework.security.oauth:spring-security-oauth2:2.0.8.RELEASE"
     compile("org.springframework:spring-web")
+    compile 'org.springframework:spring-context-support:4.1.8.RELEASE'
 
     compile "io.springfox:springfox-swagger2:2.2.2"
     compile "io.springfox:springfox-swagger-ui:2.2.2"
 
-
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+    compile 'com.google.guava:guava:19.0'
     compile 'com.google.maps:google-maps-services:0.1.12'
     compile "org.javamoney:moneta:1.0"
 
