--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 
-    ext.kotlin_version = '1.0.1-2'
+    ext.kotlin_version = '1.0.2'
     ext.powermock_version = '1.6.4'
 
     repositories {
