--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext.kotlin_version = '1.0.2'
-    ext.powermock_version = '1.6.4'
+    ext.powermock_version = '1.6.5'
 
     repositories {
         mavenCentral()
@@ -10,7 +10,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.7.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE")
 
     }
 }
@@ -44,12 +44,12 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-security"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
-    compile "org.springframework.security.oauth:spring-security-oauth2:2.0.8.RELEASE"
+    compile "org.springframework.security.oauth:spring-security-oauth2:2.0.9.RELEASE"
     compile("org.springframework:spring-web")
-    compile 'org.springframework:spring-context-support:4.1.8.RELEASE'
+    compile 'org.springframework:spring-context-support:4.2.6.RELEASE'
 
-    compile "io.springfox:springfox-swagger2:2.2.2"
-    compile "io.springfox:springfox-swagger-ui:2.2.2"
+    compile "io.springfox:springfox-swagger2:2.4.0"
+    compile "io.springfox:springfox-swagger-ui:2.4.0"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
@@ -59,16 +59,16 @@ dependencies {
     compile "org.javamoney:moneta:1.0"
 
     compile 'commons-validator:commons-validator:1.5.0'
-    compile 'com.auth0:java-jwt:2.0.1'
+    compile 'com.auth0:java-jwt:2.1.0'
     compile 'com.github.grumlimited:geocalc:v0.5.1'
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.6.5-2"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.7.4"
 
     testCompile "org.powermock:powermock-module-junit4:$powermock_version"
     testCompile "org.powermock:powermock-api-mockito:$powermock_version"
 
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testCompile "org.mockito:mockito-core:1.+"
-    testCompile "com.jayway.jsonpath:json-path:2.0.0"
+    testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile "com.jayway.jsonpath:json-path:2.2.0"
     testCompile "org.springframework.boot:spring-boot-starter-test"
     testCompile "junit:junit"
 
