add simple request logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ org.breakout.api.client.secret=123456789
 # Invitation Url
 org.breakout.team.invitationurl=https://anmeldung.break-out.org/join/CUSTOMTOKEN
 org.breakout.google.apikey=123456789
+logging.level.backend.configuration.CustomLoggingFilter=DEBUG
