--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/breakout_test
 spring.datasource.username=root
 spring.datasource.password=
 # Spring JPA
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 spring.profiles.include=default,development
 org.breakout.api.host=http://localhost:3000
 org.breakout.team.invitationurl=http://localhost:3000/join/CUSTOMTOKEN
