--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -1,6 +1,6 @@
 # MySQL in Docker
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/breakout_test
+spring.datasource.url=jdbc:mysql://192.168.99.100:3306/breakout_test
 spring.datasource.username=root
 spring.datasource.password=
 # Spring JPA
