--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,5 +1,5 @@
 # Spring JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 # Spring datasource driver
 # No spring datasource configuration for heroku because this is done inside HerokuConfiguration.java
 spring.profiles.include=default,development
