staging deploy setup

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ server.pid
 build
 .gradle
 src/main/resources/application-production.properties
+src/main/resources/application-staging.properties
+secrets
+id_rsa_breakout
