--- a/src/main/resources/application-floriandev.properties
+++ b/src/main/resources/application-floriandev.properties
@@ -1,6 +1,6 @@
 # MySQL in Docker
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://docker:3306/breakout_test
+spring.datasource.url=jdbc:mysql://localhost:3306/breakout_test_2
 spring.datasource.username=root
 spring.datasource.password=root
 # Run a validation query each 60s keep alive connection to mysql
@@ -8,5 +8,5 @@ spring.datasource.testWhileIdle=true
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 spring.datasource.validationQuery=SELECT 1
 # Spring JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.profiles.include=default,development
