added datasource and HikariCP

--- a/src/main/resources/application-floriandev.properties
+++ b/src/main/resources/application-floriandev.properties
@@ -1,12 +1,22 @@
 # MySQL in Docker
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/breakout_test_2
-spring.datasource.username=root
-spring.datasource.password=root
+org.breakout.db.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+org.breakout.db.url=jdbc:mysql://localhost:3306/breakout_test_2
+org.breakout.db.username=root
+org.breakout.db.password=root
+org.breakout.db.poolName=SpringBootHikariCP
+org.breakout.db.maximumPoolSize=15
+org.breakout.db.minimumIdle=3
+org.breakout.db.maxLifetime=2000000
+org.breakout.db.connectionTimeout=30000
+org.breakout.db.idleTimeout=30000
+org.breakout.db.pool-prepared-statements=true
+org.breakout.db.max-open-prepared-statements=2500
+
 # Run a validation query each 60s keep alive connection to mysql
-spring.datasource.testWhileIdle=true
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.validationQuery=SELECT 1
+org.breakout.db.testWhileIdle=true
+org.breakout.db.timeBetweenEvictionRunsMillis=60000
+org.breakout.db.validationQuery=SELECT 1
+
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.profiles.include=default,development
