--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     testCompile "mysql:mysql-connector-java"
     runtime "mysql:mysql-connector-java"
 
+    compile "com.zaxxer:HikariCP:2.6.0"
+
     // Other
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-security"
