--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -1,11 +1,28 @@
 # MySQL in Docker
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/breakout_test
-spring.datasource.username=root
-spring.datasource.password=
+org.breakout.db.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+org.breakout.db.url=jdbc:mysql://192.168.99.100:3306/breakout_test
+org.breakout.db.username=root
+org.breakout.db.password=
+org.breakout.db.poolName=SpringBootHikariCP
+org.breakout.db.maximumPoolSize=15
+org.breakout.db.minimumIdle=3
+org.breakout.db.maxLifetime=2000000
+org.breakout.db.connectionTimeout=30000
+org.breakout.db.idleTimeout=30000
+org.breakout.db.pool-prepared-statements=true
+org.breakout.db.max-open-prepared-statements=2500
+
+# Run a validation query each 60s keep alive connection to mysql
+org.breakout.db.testWhileIdle=true
+org.breakout.db.timeBetweenEvictionRunsMillis=60000
+org.breakout.db.validationQuery=SELECT 1
+
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.profiles.include=default,development
+
+
+# BreakOut local conf
 org.breakout.api.host=http://localhost:3000
 org.breakout.team.invitationurl=http://localhost:3000/join/CUSTOMTOKEN
 org.breakout.google.apikey=123456789
