--- a/src/main/resources/application-travis.properties
+++ b/src/main/resources/application-travis.properties
@@ -1,7 +1,22 @@
 # MySQL on travis CI
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1/test
-spring.datasource.username=root
-spring.datasource.password=
+org.breakout.db.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+org.breakout.db.url=jdbc:mysql://127.0.0.1/test
+org.breakout.db.username=root
+org.breakout.db.password=
+org.breakout.db.poolName=SpringBootHikariCP
+org.breakout.db.maximumPoolSize=15
+org.breakout.db.minimumIdle=3
+org.breakout.db.maxLifetime=2000000
+org.breakout.db.connectionTimeout=30000
+org.breakout.db.idleTimeout=30000
+org.breakout.db.pool-prepared-statements=true
+org.breakout.db.max-open-prepared-statements=2500
+
+# Run a validation query each 60s keep alive connection to mysql
+org.breakout.db.testWhileIdle=true
+org.breakout.db.timeBetweenEvictionRunsMillis=60000
+org.breakout.db.validationQuery=SELECT 1
+
+# Spring JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.profiles.include=default,development,test
