adjusted pagination for posting endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ org.breakout.api.client.secret=123456789
 org.breakout.team.invitationurl=https://anmeldung.break-out.org/join/CUSTOMTOKEN
 org.breakout.google.apikey=123456789
 logging.level.backend.configuration.CustomLoggingFilter=DEBUG
+org.breakout.api.page_size=50
