--- a/src/main/resources/application-floriandev.properties
+++ b/src/main/resources/application-floriandev.properties
@@ -1,6 +1,6 @@
 # MySQL in Docker
 org.breakout.db.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-org.breakout.db.url=jdbc:mysql://localhost:3306/breakout_test_2
+org.breakout.db.url=jdbc:mysql://localhost:3306/breakout
 org.breakout.db.username=root
 org.breakout.db.password=root
 org.breakout.db.poolName=SpringBootHikariCP
@@ -11,6 +11,17 @@ org.breakout.db.connectionTimeout=30000
 org.breakout.db.idleTimeout=30000
 org.breakout.db.pool-prepared-statements=true
 org.breakout.db.max-open-prepared-statements=2500
+
+# FLYWAY (FlywayProperties)
+flyway.enabled=true
+flyway.url=jdbc:mysql://localhost:3306/breakout
+flyway.user=root
+flyway.password=root
+flyway.locations=classpath:/resources/db.migration,classpath:/db.migration,classpath:src/main/resources/db.migration,filesystem:src/main/resources/db.migration,/db.migration
+flyway.check-location=true
+flyway.placeholders.BREAKOUT=breakout
+flyway.schemas=breakout
+flyway.validate-on-migrate=true
 
 # Run a validation query each 60s keep alive connection to mysql
 org.breakout.db.testWhileIdle=true
