philipp dev profile adjustments

--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -1,14 +1,18 @@
 # MySQL in Docker
+org.breakout.db.driverClassName=com.mysql.jdbc.Driver
 org.breakout.db.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 org.breakout.db.url=jdbc:mysql://192.168.99.100:3306/breakout_test
 org.breakout.db.username=root
 org.breakout.db.password=
 org.breakout.db.poolName=SpringBootHikariCP
-org.breakout.db.maximumPoolSize=15
-org.breakout.db.minimumIdle=3
+org.breakout.db.maximumPoolSize=100
+org.breakout.db.minimumIdle=15
 org.breakout.db.maxLifetime=2000000
-org.breakout.db.connectionTimeout=30000
-org.breakout.db.idleTimeout=30000
+org.breakout.db.connectionTimeout=120000
+org.breakout.db.idleTimeout=60000
+org.breakout.db.cachePrepStmts=true
+org.breakout.db.prepStmtCacheSize=500
+org.breakout.db.prepStmtCacheSqlLimit=4096
 org.breakout.db.pool-prepared-statements=true
 org.breakout.db.max-open-prepared-statements=2500
 
@@ -21,8 +25,9 @@ org.breakout.db.validationQuery=SELECT 1
 spring.jpa.hibernate.ddl-auto=create
 spring.profiles.include=default,development
 
-
 # BreakOut local conf
 org.breakout.api.host=http://localhost:3000
 org.breakout.team.invitationurl=http://localhost:3000/join/CUSTOMTOKEN
 org.breakout.google.apikey=123456789
+
+# logging.level.org.hibernate.SQL=DEBUG
