--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,28 @@
 # Admin Account Data
 org.breakout.admin_email=admin@break-out.org
 org.breakout.admin_password=password
+
 # Media Uploader / Recoder shared secret
 org.breakout.api.jwt_secret=12345678
+
+# Payment Service shared secret
+org.breakout.api.payment_auth_token=12345678
+
 # server port
 server.port=8082
+
 # Breakout mailer settings
 org.breakout.mailer.url=http://localhost:3000
 org.breakout.mailer.xauthtoken=123456789
+
 # These settings will be used for creating valid activation links
 org.breakout.api.host=http://localhost:8082
+
 # OAuth Client secrets
 # TODO: Where are they still used??
 org.breakout.api.client.name=breakout_app
 org.breakout.api.client.secret=123456789
+
 # Invitation Url
 org.breakout.team.invitationurl=https://anmeldung.break-out.org/join/CUSTOMTOKEN
 org.breakout.google.apikey=123456789
