--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,9 @@ buildscript {
         jcenter()
         maven { url "https://jitpack.io" }
     }
-
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE")
 
     }
 }
@@ -20,7 +19,7 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'spring-boot'
 
 jar {
     version = '0.1.0'
