--- a/src/main/resources/application-floriandev.properties
+++ b/src/main/resources/application-floriandev.properties
@@ -1,4 +1,5 @@
 # MySQL in Docker
+org.breakout.db.driverClassName=com.mysql.jdbc.Driver
 org.breakout.db.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 org.breakout.db.url=jdbc:mysql://localhost:3306/breakout
 org.breakout.db.username=root
