Add flyway to existing db with baseline-on-migrate=true

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ org.breakout.team.invitationurl=https://anmeldung.break-out.org/join/CUSTOMTOKEN
 org.breakout.google.apikey=123456789
 logging.level.backend.configuration.CustomLoggingFilter=DEBUG
 org.breakout.api.page_size=50
+flyway.baseline-on-migrate=true
