Disable migrations on travis

--- a/src/main/resources/application-travis.properties
+++ b/src/main/resources/application-travis.properties
@@ -18,5 +18,6 @@ org.breakout.db.timeBetweenEvictionRunsMillis=60000
 org.breakout.db.validationQuery=SELECT 1
 
 # Spring JPA
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.profiles.include=default,development,test
+flyway.enabled=false
