Include stacktraces in failed test

--- a/build.gradle
+++ b/build.gradle
@@ -103,5 +103,6 @@ sourceSets {
 test {
     testLogging {
         events "passed", "skipped", "failed"
+        exceptionFormat = 'full'
     }
 }
