added fixed invoice table migration

--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -21,8 +21,14 @@ org.breakout.db.testWhileIdle=true
 org.breakout.db.timeBetweenEvictionRunsMillis=60000
 org.breakout.db.validationQuery=SELECT 1
 
+# FLYWAY (FlywayProperties)
+flyway.placeholders.BREAKOUT=breakout_test
+flyway.schemas=breakout_test
+flyway.validate-on-migrate=true
+flyway.baseline-on-migrate=true
+
 # Spring JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.profiles.include=default,development
 
 # BreakOut local conf
