Upgrade from spring boot 1.3.5 to 1.5.2
* Upgrade dependency
* Use new Get/Post/Put/… Mappings
* Use implicit autowiring (@autowired not required)
* Fix some broken configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+security.oauth2.resource.filter-order = 3
+
 # Admin Account Data
 org.breakout.admin_email=admin@break-out.org
 org.breakout.admin_password=password
