--- a/src/main/resources/application-floriandev.properties
+++ b/src/main/resources/application-floriandev.properties
@@ -1,17 +1,14 @@
 # MySQL in Docker
-org.breakout.db.driverClassName=com.mysql.jdbc.Driver
-org.breakout.db.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-org.breakout.db.url=jdbc:mysql://localhost:3306/breakout
-org.breakout.db.username=root
-org.breakout.db.password=root
-org.breakout.db.poolName=SpringBootHikariCP
-org.breakout.db.maximumPoolSize=15
-org.breakout.db.minimumIdle=3
-org.breakout.db.maxLifetime=2000000
-org.breakout.db.connectionTimeout=30000
-org.breakout.db.idleTimeout=30000
-org.breakout.db.pool-prepared-statements=true
-org.breakout.db.max-open-prepared-statements=2500
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/breakout
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.hikari.pool-name=BreakOutBackendHikariCP
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.max-lifetime=2000000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=30000
 
 # FLYWAY (FlywayProperties)
 flyway.placeholders.BREAKOUT=breakout
@@ -19,9 +16,6 @@ flyway.schemas=breakout
 flyway.validate-on-migrate=true
 
 # Run a validation query each 60s keep alive connection to mysql
-org.breakout.db.testWhileIdle=true
-org.breakout.db.timeBetweenEvictionRunsMillis=60000
-org.breakout.db.validationQuery=SELECT 1
 
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=validate
