--- a/src/main/resources/application-travis.properties
+++ b/src/main/resources/application-travis.properties
@@ -1,16 +1,14 @@
 # MySQL on travis CI
-org.breakout.db.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-org.breakout.db.url=jdbc:mysql://127.0.0.1/test
-org.breakout.db.username=root
-org.breakout.db.password=
-org.breakout.db.poolName=SpringBootHikariCP
-org.breakout.db.maximumPoolSize=15
-org.breakout.db.minimumIdle=3
-org.breakout.db.maxLifetime=2000000
-org.breakout.db.connectionTimeout=30000
-org.breakout.db.idleTimeout=30000
-org.breakout.db.pool-prepared-statements=true
-org.breakout.db.max-open-prepared-statements=2500
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:mysql://127.0.0.1/test
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.hikari.pool-name=BreakOutBackendHikariCP
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.max-lifetime=2000000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=30000
 
 # Run a validation query each 60s keep alive connection to mysql
 org.breakout.db.testWhileIdle=true
