utf8mb4 migration

--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -1,50 +1,24 @@
 # MySQL in Docker
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/breakout_test
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/breakout_test
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mySecretPw
 spring.datasource.hikari.pool-name=BreakOutBackendHikariCP
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.init-sql="SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci;"
 
-#org.breakout.db.driverClassName=com.mysql.jdbc.Driver
-#org.breakout.db.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-#org.breakout.db.url=jdbc:mysql://192.168.99.100:3306/breakout_test
-#org.breakout.db.username=root
-#org.breakout.db.password=
-#org.breakout.db.poolName=SpringBootHikariCP
-#org.breakout.db.maximumPoolSize=100
-#org.breakout.db.minimumIdle=15
-#org.breakout.db.maxLifetime=2000000
-#org.breakout.db.connectionTimeout=120000
-#org.breakout.db.idleTimeout=60000
-#org.breakout.db.cachePrepStmts=true
-#org.breakout.db.prepStmtCacheSize=500
-#org.breakout.db.prepStmtCacheSqlLimit=4096
-#org.breakout.db.pool-prepared-statements=true
-#org.breakout.db.max-open-prepared-statements=2500
-
-# Run a validation query each 60s keep alive connection to mysql
-#org.breakout.db.testWhileIdle=true
-#org.breakout.db.timeBetweenEvictionRunsMillis=60000
-#org.breakout.db.validationQuery=SELECT 1
 
 # FLYWAY (FlywayProperties)
-flyway.placeholders.BREAKOUT=breakout_test
-flyway.schemas=breakout_test
+flyway.placeholders.BREAKOUT=breakout
+flyway.schemas=breakout
 flyway.validate-on-migrate=true
-flyway.baseline-on-migrate=true
+
+# Run a validation query each 60s keep alive connection to mysql
 
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.profiles.include=default,development
-
-# BreakOut local conf
-org.breakout.api.host=http://localhost:3000
-org.breakout.team.invitationurl=http://localhost:3000/join/CUSTOMTOKEN
-org.breakout.google.apikey=123456789
-
-# logging.level.org.hibernate.SQL=DEBUG
