Adding Basic Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,10 @@ org.breakout.mailer.xauthtoken=123456789
 # These settings will be used for creating valid activation links
 org.breakout.api.host=http://localhost:8082
 
+# Notifications
+org.breakout.api.notifications.url=https://onesignal.com
+org.breakout.api.notifications.appId=db55a101-3fe8-4f3a-9898-e79146ed9bbb
+
 # OAuth Client secrets
 # TODO: Where are they still used??
 org.breakout.api.client.name=breakout_app
