--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -1,8 +1,8 @@
 # MySQL in Docker
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/breakout_test
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/breakout_test
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mySecretPw
 spring.datasource.hikari.pool-name=BreakOutBackendHikariCP
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=3
