Implement a simple Spring-in-memory cache for the endpoint GET /posting/

--- a/src/main/resources/application-tomdev.properties
+++ b/src/main/resources/application-tomdev.properties
@@ -10,6 +10,8 @@ spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=30000
 
+logging.level.backend.configuration.CustomLoggingFilter=WARN
+
 # FLYWAY (FlywayProperties)
 flyway.placeholders.BREAKOUT=breakout
 flyway.schemas=breakout
@@ -18,4 +20,4 @@ flyway.validate-on-migrate=true
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.profiles.include=default,development
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
