--- a/src/main/resources/application-floriandev.properties
+++ b/src/main/resources/application-floriandev.properties
@@ -20,4 +20,4 @@ flyway.validate-on-migrate=true
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.profiles.include=default,development
-spring.jpa.show-sql=true
+spring.cache.type=simple
