Set cache type on travis

--- a/src/main/resources/application-travis.properties
+++ b/src/main/resources/application-travis.properties
@@ -19,3 +19,4 @@ org.breakout.db.validationQuery=SELECT 1
 spring.jpa.hibernate.ddl-auto=create
 spring.profiles.include=default,development,test
 flyway.enabled=false
+spring.cache.type=simple
