--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,5 @@ org.breakout.google.apikey=123456789
 logging.level.backend.configuration.CustomLoggingFilter=DEBUG
 org.breakout.api.page_size=50
 flyway.baseline-on-migrate=true
+
+spring.cache.type=simple
