Change media handling from self-hosted to cloudinary
This includes the following changes:
* Add an endpoint where cloudinary requests can be signed
* Remove old MediaType class and references to it and use url instead
* Adapt entities and views where necessary
Author:    Philipp Piwo <github@piwo.space>
Date:      Sat Jan 13 17:28:10 2018 +0100

--- a/build.gradle
+++ b/build.gradle
@@ -72,10 +72,11 @@ dependencies {
     compile "org.javamoney:moneta:1.0"
 
     compile 'commons-validator:commons-validator:1.5.0'
-    compile 'com.auth0:java-jwt:2.1.0'
     compile 'com.github.grumlimited:geocalc:v0.5.1'
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.7.4"
     compile "org.flywaydb:flyway-core:4.1.2"
+
+    compile "com.cloudinary:cloudinary-http44:1.17.0"
 
     testCompile "org.powermock:powermock-module-junit4:$powermock_version"
     testCompile "org.powermock:powermock-api-mockito:$powermock_version"
