--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.7.4"
     compile "org.flywaydb:flyway-core:4.1.2"
 
+    compile 'com.sendgrid:sendgrid-java:4.1.2'
+
     testCompile "org.powermock:powermock-module-junit4:$powermock_version"
     testCompile "org.powermock:powermock-api-mockito:$powermock_version"
 
