added basic sendgrid integration showcase

--- a/src/main/resources/application-philippdev.properties
+++ b/src/main/resources/application-philippdev.properties
@@ -48,3 +48,5 @@ org.breakout.team.invitationurl=http://localhost:3000/join/CUSTOMTOKEN
 org.breakout.google.apikey=123456789
 
 # logging.level.org.hibernate.SQL=DEBUG
+
+org.breakout.sendgrid.apikey=123456789
