--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ server.port=8082
 # Breakout mailer settings
 org.breakout.mailer.url=http://localhost:3000
 org.breakout.mailer.xauthtoken=123456789
+org.breakout.sendgrid.apikey=123456789
 
 # These settings will be used for creating valid activation links
 org.breakout.api.host=http://localhost:8082
