code style adjustments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,7 @@ org.breakout.api.page_size=50
 flyway.baseline-on-migrate=true
 
 spring.cache.type=simple
+
+# Cloudinary Credentials
+org.breakout.cloudinary.api_key=123
+org.breakout.cloudinary.api_secret=123
