Initial redis config

--- a/src/main/resources/application-tomdev.properties
+++ b/src/main/resources/application-tomdev.properties
@@ -12,6 +12,13 @@ spring.datasource.hikari.idle-timeout=30000
 
 logging.level.backend.configuration.CustomLoggingFilter=WARN
 
+# Redis Config
+spring.cache.type=redis
+spring.cache.cache-names=breakout-spielwiese
+spring.redis.host=breakout.redis.cache.windows.net
+spring.redis.port=6380
+spring.cache.redis.time-to-live=600000
+
 # FLYWAY (FlywayProperties)
 flyway.placeholders.BREAKOUT=breakout
 flyway.schemas=breakout
