--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-security"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "org.springframework.boot:spring-boot-starter-cache"
+    compile "org.springframework.boot:spring-boot-starter-data-redis"
 
     compile "org.springframework.security.oauth:spring-security-oauth2:2.3.2.RELEASE"
     compile "org.springframework:spring-web"
