--- a/src/main/resources/application-philipptest.properties
+++ b/src/main/resources/application-philipptest.properties
@@ -1,6 +1,6 @@
 # MySQL in Docker
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/breakout
+spring.datasource.url=jdbc:mysql://localhost:3306/breakout_test
 spring.datasource.username=root
 spring.datasource.password=mySecretPw
 spring.datasource.hikari.pool-name=BreakOutBackendHikariCP
@@ -11,11 +11,8 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=30000
 
 # FLYWAY (FlywayProperties)
-flyway.placeholders.BREAKOUT=breakout
-flyway.schemas=breakout
-flyway.validate-on-migrate=true
+flyway.enabled=false
 
 # Spring JPA
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.profiles.include=default,development
-spring.cache.type=simple
