--- a/src/main/resources/application-tomdev.properties
+++ b/src/main/resources/application-tomdev.properties
@@ -1,8 +1,8 @@
 # MySQL in Docker
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/breakout
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://breakout-prod.mysql.database.azure.com:3306/breakout-spielwiese?useSSL=true&requireSSL
+spring.datasource.username=devops@breakout-prod
+spring.datasource.password=V7Db682DiVktFoiJ
 spring.datasource.hikari.pool-name=BreakOutBackendHikariCP
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=3
@@ -14,17 +14,22 @@ logging.level.backend.configuration.CustomLoggingFilter=WARN
 
 # Redis Config
 spring.cache.type=redis
-spring.cache.cache-names=breakout-spielwiese
+spring.cache.cache-names=postings,teams,locations
 spring.redis.host=breakout.redis.cache.windows.net
+spring.redis.password=3Tci12FxZiAQ7c1wN0BQI79tK3TCwyWbEIIJ8Oqv4ZQ
 spring.redis.port=6380
+spring.redis.ssl=true
 spring.cache.redis.time-to-live=600000
 
 # FLYWAY (FlywayProperties)
-flyway.placeholders.BREAKOUT=breakout
-flyway.schemas=breakout
+flyway.placeholders.BREAKOUT=breakout-spielwiese
+flyway.schemas=breakout-spielwiese
 flyway.validate-on-migrate=true
 
 # Spring JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.profiles.include=default,development
 #spring.jpa.show-sql=true
+
+org.breakout.cloudinary.api_key=955374861429162
+org.breakout.cloudinary.api_secret=SLgBXHtEDbng4g33ZUqNaacG5ps
