--- a/src/main/resources/application-floriandev.properties
+++ b/src/main/resources/application-floriandev.properties
@@ -1,6 +1,7 @@
 # MySQL in Docker
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/breakout
+spring.datasource.url=jdbc:mysql://localhost:3306/breakout?useUnicode=yes&characterEncoding=UTF8
+spring.datasource.hikari.connectionInitSql=SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci;
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.hikari.pool-name=BreakOutBackendHikariCP
