--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,9 @@ jobs:
   include:
     - stage: build and test
       script:
-        - gradle test
+        - |
+          printenv
+          gradle test
     - stage: build docker image
       script:
         - |
