fix flyway table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,7 @@ org.breakout.google.apikey=123456789
 logging.level.backend.configuration.CustomLoggingFilter=DEBUG
 org.breakout.api.page_size=50
 flyway.baseline-on-migrate=true
+flyway.table=schema_version
 
 spring.cache.type=simple
 
