--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     permissions:
       security-events: write
     env:
+      SPRING_PROFILES_ACTIVE: test
       DB_DATABASE: test
       DB_USER: root
       DB_PASSWORD: root
@@ -26,6 +27,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
+          distribution: 'microsoft'
           java-version: '8'
       - name: Run Gradle
         run: gradle test
