--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'microsoft'
+          distribution: 'temurin'
           java-version: '8'
       - name: Run Gradle
         run: gradle test
