--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           distribution: 'temurin'
           java-version: '8'
       - name: Run Gradle
-        run: gradle test
+        run: ./gradlew test
   build_and_push_docker_to_registry:
     name: Push Docker image to Registry
     runs-on: ubuntu-latest
